# Quadratic-Ant-Colony-Optimisation-Solver

./: Ant.cpp  Ant.h  CMakeLists.txt  Graph.cpp  Graph.h  LICENSE  README.md  dataSet.txt  main.cpp
src/: Ant.cpp  Ant.h  CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
test/: AntTest.cpp  CMakeLists.txt  GraphTest.cpp
